<resources>
    <string name="app_name">PokerClub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="club_name">Endava Poker Club</string>
    <string name="email_hint">example@endava.com</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password_hint">myPassword</string>
    <string name="sign_in">Sign in</string>
    <string name="signout">Sign out</string>
    <string name="loading">loading</string>
    <string name="name">Name</string>
    <string name="debt">Debt</string>
    <string name="endavans">Endavans</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="buy_endavans">Buy Endavans</string>
    <string name="deposit_endavans">Deposit Endavans</string>
    <string name="empty_deposit">Please fill deposit field</string>
    <string name="empty_withdraw">Please fill withdraw value</string>
    <string name="withdraw_endavans">Withdraw Endavan$</string>
    <string name="endavans_to_withdraw">Endavans to withdraw</string>
    <string name="_0">0</string>
    <string name="pay_debt">Pay Debt</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_play">Play</string>
    <string name="tile_profile">Profile</string>

    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="display_name_hint">Display name</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="continue_game">Continue game</string>
    <string name="showqr">Show QR</string>
    <string name="pause_game">Pause game</string>
    <string name="leave">Leave</string>
    <string name="change_admin">Change admin</string>
    <string name="editProfile">Edit profile</string>
    <string name="use_life_saver">Use life saver</string>
    <string name="use_lifesaver">Use Lifesaver</string>
    <string name="use">Use</string>
    <string name="buy">Buy</string>
    <string name="pay">Pay</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="title_activity_get_started">GetStarted</string>
    <string name="denied_by_user">Permission has been denied by user</string>
    <string name="succesfully">Succesfully</string>
    <string name="failed">Failed</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
</resources>
