<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".game.views.GameActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_user_list"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:enabled="false"
        android:onClick="buyEndavans"
        android:text="@string/buy_endavans"
        android:textSize="16sp" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="100"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        tools:context=".GridXMLActivity">

        <Button
            android:id="@+id/depositButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_rowWeight="25"
            android:enabled="false"
            android:onClick="depositEndavans"
            android:padding="@dimen/padding_functions"
            android:text="@string/deposit_endavans"
            android:textSize="10sp" />


        <Button
            android:id="@+id/withdrawButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_rowWeight="25"
            android:enabled="false"
            android:onClick="withdrawEndavans"
            android:padding="@dimen/padding_functions"
            android:text="@string/withdraw_endavans"
            android:textSize="10sp" />

        <Button
            android:id="@+id/payDebtButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_rowWeight="25"
            android:enabled="false"
            android:onClick="payDebt"
            android:text="@string/pay_debt"
            android:textSize="10sp" />

        <Button
            android:id="@+id/useLifeSaver"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_rowWeight="25"
            android:enabled="false"
            android:onClick="useLifeSaver"
            android:text="@string/use_life_saver"
            android:textSize="10sp" />


    </GridLayout>
</LinearLayout>