...
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".login.LoginActivity">


    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="submit"
        android:text="@string/log_in" />

...
