<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextHelperDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:hint="@string/endavans_to_withdraw"
        android:inputType="number"
        android:maxLength="7"
        android:padding="@dimen/padding_functions"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonHelperDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="withdraw"
        android:text="Withdraw"/>

</LinearLayout>